Accordions - Change icon size to 16px and make sure it's aligned middle.

--- a/scss/_accordions.scss
+++ b/scss/_accordions.scss
@@ -168,7 +168,7 @@
 						}
 
 						[class*="sui-icon-"] {
-							font-size: 20px;
+							font-size: 16px;
 						}
 
 						.sui-accordion-open-indicator {
