--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -102,11 +102,12 @@
 
 				> [class*="sui-icon-"] {
 					margin-right: 10px;
-					font-size: 20px;
-					vertical-align: top;
+					font-size: 16px;
+					vertical-align: middle;
 
 					&:before {
-						display: block;
+						display: inline-block;
+						line-height: 30px;
 					}
 
 					&.sui-icon-right {
